2021-11-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Joseph Coffland:
	patch #8957: Allow reading prodsig memory from stk500v2 on xmega devices
	* stk500v2.c (stk600_xprog_read_byte, stk600_xprog_paged_load):
	treat "prodsig" memory space as equivalent to "calibration"

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Martin Thierer:
	patch #10017: uspasp / tpi: Automatically clear configuration byte (fuse) before writing it
	* usbasp.c (usbasp_tpi_paged_write): clear fuse region before writing it

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Michael Petersen:
	patch #9697: Add iseavrprog support
	* avrdude.conf.in (iseavrprog): New programmer

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #50630: Erase Cycle Counter options ( -y -Y n ) should be removed from usage Message
	* main.c (usage): remove -y / -Y descriptions

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in (ATmega8A): new device (alias for ATmega8)

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #50517: Reading fails if "immediate mode" for output file format is selected - fileio: invalid operation=1
	* update.c (do_op): refuse to write to "immediate format" argument

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Martin Thierer:
	bug #60863: avrftdi programming error probably caused by multiple, consecutive empty pages
	* avrftdi.c (avrftdi_flash_write): Skip empty pages

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matwey V. Kornilov:
	bug #58495: Add atmega324pb support to avrdude.conf.in
	* avrdude.conf.in (ATmega324PB): new entry

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55734: USBtiny programming of ATmega328p broken by Patch #9278
	* usbtiny.c (usbtiny_initialize): undo change from patch #9728

2021-11-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #55009: no efuses for m164a/pa
	* avrdude.conf.in (ATmega164P): derive from ATmega324P
