@@ -104,6 +104,7 @@ Current:
     patch #9697: Add iseavrprog support
     patch #10017: uspasp / tpi: Automatically clear configuration byte (fuse) before writing it
     patch #8957: Allow reading prodsig memory from stk500v2 on xmega devices
+    patch #9110: Let reserved fuse bits to be read as *don't care*
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
